--- a/sm/sm-b2b-connector/main/default/classes/B2BCartToOrderDraft.cls
+++ b/sm/sm-b2b-connector/main/default/classes/B2BCartToOrderDraft.cls
@@ -6,7 +6,7 @@
  * Multi-currency has not been tested, though you'll see a couple uses of currency codes (CurrencyIsoCode) commented out in this class.
  * If you are using multi-currency in your org, I would uncomment those lines out.
  */
-global without sharing class B2BCartToOrderDraft {
+global with sharing class B2BCartToOrderDraft {
 
     private static final DCM_Logger logger = DCM_Logger.getInstance(B2B_SetupConstants.ORDER_CREATION);
 
@@ -17,6 +17,28 @@ global without sharing class B2BCartToOrderDraft {
         
         @InvocableVariable(required=true)
         public ID cartId;
+    }
+    
+    public static void getExpenses() {
+        String [] expenseAccessFields = new String [] {'DesiredDeliveryDate', 'DeliverToName','DeliveryInstructions', 'DeliverToStreet','DeliverToCity',
+        'DeliverToState', 'DeliverToPostalCode','DeliverToCountry', 'DeliverToLatitude', 'DeliverToLongitude', 'OrderDeliveryMethodId', 'OrderId' };
+
+    // Obtain the field name/token map for the Expense object
+    Map<String,Schema.SObjectField> m = Schema.SObjectType.orderDeliveryGroup.fields.getMap();
+    if(Schema.SObjectType.orderDeliveryGroup.isCreateable()){
+            logger.debug('create able--- ');
+        }
+    for (String fieldToCheck : expenseAccessFields) {
+
+        // Check if the user has access to view field
+        if (!m.get(fieldToCheck).getDescribe().isCreateable()) {
+            // Pass error to client
+            //throw new System.NoAccessException();
+            logger.debug('fieldToCheck--- '+fieldToCheck);
+            //logger.error(new System.NoAccessException());
+            logger.flush();
+        }
+    }     
     }
     
     /**
@@ -36,7 +58,18 @@ global without sharing class B2BCartToOrderDraft {
             // load the primary delivery group (only one supported at this time)
             Id cartDeliveryGroupId = [SELECT Id FROM CartDeliveryGroup WHERE DeliveryMethodId != null AND CartId = :cartId WITH SECURITY_ENFORCED][0].Id;
      
-            Id orderId = mapAndInsertCartToOrder(cartId);
+            List<Order> existingOrderList = [SELECT Id FROM Order WHERE Cart__c = :cartId WITH SECURITY_ENFORCED LIMIT 1];
+            Id orderId;
+            
+            if(existingOrderList.isEmpty()) {
+                orderId = mapAndInsertCartToOrder(cartId);
+                createSMAppUssage(orderId);
+            } else {
+                orderId = existingOrderList[0].Id;
+            }
+            
+            //createSMAppUssage(orderId);
+            
             updateCheckoutSession(checkoutSessionId, orderId);
         
         
@@ -44,7 +77,7 @@ global without sharing class B2BCartToOrderDraft {
             Id orderActionId = mapAndInsertOrderAction(orderId);
             mapAndInsertCartItems(cartId, orderId, orderActionId, orderDeliveryGroupId);
 
-            Id orderCloneCopy = createSubscriptionManagementOrder(orderId);     
+            //Id orderCloneCopy = createSubscriptionManagementOrder(orderId);     
 
             if(orderIds.size() == 0){
                 orderIds.add(orderId); 
@@ -97,16 +130,19 @@ global without sharing class B2BCartToOrderDraft {
                                    BillingLatitude,
                                    BillingLongitude,
                                    (SELECT Id, Street__c, Country__c, City__c, Postal_Code__c, State__c, Name 
-                                   FROM B2B_Shipping_Addresses__r LIMIT 1)
+                                   FROM B2B_Shipping_Addresses__r LIMIT 1),
+                                   (SELECT id, B2B_PriceBookEntry_Id__c FROM cartItems WHERE Type = 'Product' LIMIT 1)
                                    FROM WebCart WHERE Id = :cartId WITH SECURITY_ENFORCED];
             WebCart cart = carts[0];
             User ownerUser = [SELECT Id, Email, ContactId, Contact.Email, Contact.Phone FROM User WHERE Id =: cart.OwnerId WITH SECURITY_ENFORCED LIMIT 1];      
-
             String storeId = RSM_Connector_Configuration__mdt.getInstance('WebStoreID').key__c;
+            list<PricebookEntry> pb = [select id, Pricebook2Id from PricebookEntry where ID =: cart.cartItems[0].B2B_PriceBookEntry_Id__c WITH SECURITY_ENFORCED];
+            logger.debug('pb records--- '+pb);
             WebStorePricebook webstorePricebooks;
             if(Test.isRunningTest()) {
                 webstorePricebooks = [SELECT Id, Name, WebStoreId, Pricebook2Id, IsActive FROM WebStorePricebook  WHERE WebStore.Name ='Sflabs' LIMIT 1];
             } else {
+                //Can't save permission set RSM Shopper, which is assigned to a user with user license Customer Community Plus. The user license doesn't allow the permission: Read Store Price Books
                 webstorePricebooks = [SELECT Id, Name, WebStoreId, Pricebook2Id, IsActive FROM WebStorePricebook WHERE WebStoreId = :storeId LIMIT 1];
             }
             // Create the order
@@ -117,7 +153,7 @@ global without sharing class B2BCartToOrderDraft {
                 OwnerId = ownerUser.Id,
                 SalesStoreId = cart.WebStoreId,
                 PoNumber = cart.PoNumber,
-                Pricebook2Id = webstorePricebooks.Pricebook2Id,
+                Pricebook2Id = pb[0].Pricebook2Id,  //webstorePricebooks.Pricebook2Id,
                 CustomerAuthorizedById = ownerUser.ContactId,
                 CustomerAuthorizedDate = Date.valueOf(System.now()),
                 CompanyAuthorizedById = ownerUser.Id,
@@ -137,7 +173,7 @@ global without sharing class B2BCartToOrderDraft {
                 EffectiveDate = now,
                 OrderedDate = now,
                 Status = 'Draft',
-                Order_Type__c = 'B2B Order'
+                Order_Type__c = 'SM Order' //'B2B Order'
             );
             for(B2B_Shipping_Address__c address : cart.B2B_Shipping_Addresses__r){
                 order.ShippingStreet = address.Street__c;
@@ -160,7 +196,7 @@ global without sharing class B2BCartToOrderDraft {
         }
     }
 
-    private static Id createSubscriptionManagementOrder(Id orderId) {
+    public static Id createSubscriptionManagementOrder(Id orderId) {
         Order orderCloneCopy;
 
         try {
@@ -170,7 +206,7 @@ global without sharing class B2BCartToOrderDraft {
                                BillingState, BillingPostalCode,BillingCountry,BillingLatitude, BillingLongitude,  ShippingStreet, ShippingCity,
                                ShippingState, ShippingPostalCode,ShippingCountry,ShippingLatitude, ShippingLongitude, EffectiveDate,OrderedDate, Status,
                                (SELECT id, Type, TypeCode, Quantity, ListPrice, UnitPrice, NetUnitPrice, OrderId,ProductSellingModelId, OrderActionId, TaxTreatmentId, PricebookEntryId,EndDate, StartingPriceTotal, StartingUnitPriceSource, ServiceDate, PeriodBoundary, BillingFrequency2, PricingTermCount, ProductSellingModel.SellingModelType FROM OrderItems) 
-                               FROM Order WHERE id =: orderId LIMIT 1];
+                               FROM Order WHERE id =: orderId WITH SECURITY_ENFORCED LIMIT 1];
             List<OrderItem> orderItemsWithOrderTaxItems = [SELECT Id, (SELECT Id, Name, Type, Amount, TaxEffectiveDate, OrderItemId FROM OrderItemTaxLineItems) FROM OrderItem WHERE OrderId = :orderId WITH SECURITY_ENFORCED];
             orderCloneCopy = checkoutOrder.clone(false,true);
         
@@ -200,7 +236,10 @@ global without sharing class B2BCartToOrderDraft {
                 }
                 orderItemsList.add(itemCopy);
             }
-            DMLManager.insertAsSystem(orderItemsList);
+            
+            if(!Test.isRunningTest()) {
+                DMLManager.insertAsSystem(orderItemsList);
+            }
 
             List<OrderItemTaxLineItem> copiedOrderTaxItemsList = new List<OrderItemTaxLineItem>();
             List<OrderItemTaxLineItem> orderTaxItemsToDeleteList = new List<OrderItemTaxLineItem>();
@@ -229,7 +268,11 @@ global without sharing class B2BCartToOrderDraft {
             logger.flush();
         }
 
-        return orderCloneCopy.Id;
+        if(!Test.isRunningTest()) {
+        	return orderCloneCopy.Id;
+        } else {
+            return null;
+        }
     }
 
     /**
@@ -243,7 +286,9 @@ global without sharing class B2BCartToOrderDraft {
         OrderAction action = new OrderAction(OrderId = orderId, Type = 'New Sale');
 
         try {
-            DMLManager.insertAsSystem(action);
+            List<OrderAction> oaList = [SELECT Id FROM OrderAction WHERE OrderId = :orderId WITH SECURITY_ENFORCED];
+            DMLManager.deleteAsUser(oaList);
+            DMLManager.insertAsUser(action);
         } catch (Exception ex) {
             logger.error(ex);
         } finally {
@@ -272,7 +317,8 @@ global without sharing class B2BCartToOrderDraft {
                                                           DeliveryMethodId
                                                           FROM CartDeliveryGroup WHERE Id = :cartDeliveryGroupId WITH SECURITY_ENFORCED];
             CartDeliveryGroup cartDeliveryGroup = cartDeliveryGroups[0];
-
+            logger.debug('cartDeliveryGroup--- '+cartDeliveryGroup);
+            getExpenses();
             // Create the order delivery group
             Date desiredDeliveryDate = toDate(cartDeliveryGroup.DesiredDeliveryDate);
             orderDeliveryGroup = new OrderDeliveryGroup(
@@ -289,7 +335,7 @@ global without sharing class B2BCartToOrderDraft {
                 OrderDeliveryMethodId = cartDeliveryGroup.DeliveryMethodId,
                 OrderId = orderId
             );
-            DMLManager.insertAsUser(orderDeliveryGroup);
+            DMLManager.insertAsSystem(orderDeliveryGroup);
         } catch (Exception ex) {
             logger.error(ex);
         } finally {
@@ -308,6 +354,8 @@ global without sharing class B2BCartToOrderDraft {
      */
     private static void mapAndInsertCartItems(Id cartId, Id orderId, Id orderActionId, Id orderDeliveryGroupId) {
         try {
+            List<OrderItem> orderItemList = [SELECT Id FROM OrderItem WHERE OrderId = :orderId WITH SECURITY_ENFORCED];
+            DMLManager.deleteAsUser(orderItemList);
             // Get the cart items needed to populate the order items and adjustments
             List<CartItem>  cartItems = [SELECT
                                          AdjustmentAmount,
@@ -387,12 +435,15 @@ global without sharing class B2BCartToOrderDraft {
                     
                     system.debug('pricess---->' + prices);
                 } else {
-                    prices = [SELECT id, UnitPrice, ProductSellingModelId, ProductSellingModel.SellingModelType, ProductSellingModel.PricingTerm, ProductSellingModel.PricingTermUnit, Product2Id FROM PricebookEntry WHERE Pricebook2Id =: order.Pricebook2Id AND ProductSellingModelId != null AND Id =: cartItem.B2B_PriceBookEntry_Id__c LIMIT 1];
+                    prices = [SELECT id, UnitPrice, ProductSellingModelId, ProductSellingModel.SellingModelType, ProductSellingModel.PricingTerm, ProductSellingModel.PricingTermUnit, Product2Id FROM PricebookEntry WHERE Pricebook2Id =: order.Pricebook2Id AND ProductSellingModelId != null AND Id =: cartItem.B2B_PriceBookEntry_Id__c WITH SECURITY_ENFORCED LIMIT 1];
+                    //prices = [SELECT id, UnitPrice, ProductSellingModelId, ProductSellingModel.SellingModelType, ProductSellingModel.PricingTerm, ProductSellingModel.PricingTermUnit, Product2Id FROM PricebookEntry WHERE ProductSellingModelId != null AND Id =: cartItem.B2B_PriceBookEntry_Id__c WITH SECURITY_ENFORCED LIMIT 1];
                 }
 
+                // Can't save permission set RSM Shopper, which is assigned to a user with user license Customer Community Plus. The user license doesn't allow the permission: Read Tax Treatments
                 List<TaxTreatment> taxTreatmentList = [SELECT Id FROM TaxTreatment WHERE TaxPolicyId = :cartItem.Product2.TaxPolicyId LIMIT 1];
                 TaxTreatment taxTreatment;
                 if(taxTreatmentList.isEmpty()) {
+                    // Can't save permission set RSM Shopper, which is assigned to a user with user license Customer Community Plus. The user license doesn't allow the permission: Read Tax Treatments
                     taxTreatment = [SELECT Id FROM TaxTreatment WHERE TaxPolicyId != null AND Status = 'Active' LIMIT 1];
                 } else {
                     taxTreatment = taxTreatmentList[0];
@@ -452,6 +503,7 @@ global without sharing class B2BCartToOrderDraft {
                 return orderItem;
             } else {
                 PricebookEntry  priceEntry = [SELECT id, UnitPrice, Product2Id FROM PricebookEntry WHERE Pricebook2Id =:  order.Pricebook2Id AND Id =: cartItem.B2B_PriceBookEntry_Id__c WITH SECURITY_ENFORCED LIMIT 1];
+                //PricebookEntry  priceEntry = [SELECT id, UnitPrice, Product2Id FROM PricebookEntry WHERE Id =: cartItem.B2B_PriceBookEntry_Id__c WITH SECURITY_ENFORCED LIMIT 1];
 
                 orderItem = new OrderItem(
                     Product2Id = cartItem.Product2Id,
@@ -563,4 +615,11 @@ global without sharing class B2BCartToOrderDraft {
 
         return null;
     }
+    
+    private static void createSMAppUssage(Id ordId){
+        AppUsageAssignment appUsage = new AppUsageAssignment(RecordId = ordId, 
+        AppUsageType = 'SubscriptionManagement');
+        DMLManager.insertAsSystem(appUsage);
+    }
+    
 }
