--- a/sm/sm-b2b-connector/main/default/classes/B2BOrdersSelector.cls
+++ b/sm/sm-b2b-connector/main/default/classes/B2BOrdersSelector.cls
@@ -3,7 +3,7 @@
  * @last modified on  : 03-02-2022
  * @last modified by  : Abhishek Walia
 **/
-public without sharing class B2BOrdersSelector {
+public with sharing class B2BOrdersSelector {
 
     public static final String OBJECT_API_NAME = 'Order';
     public static final String FILTER_STATUS = 'Order In Progress';
@@ -105,7 +105,7 @@ public without sharing class B2BOrdersSelector {
         if(String.isBlank(accId)){
             statusList = new List<String>();
         }
-        return Database.countQuery ( 'SELECT count() FROM '+ OBJECT_API_NAME + ' '+ getQueryWhere(mapParam) );
+        return Database.countQuery ( 'SELECT count() FROM '+ OBJECT_API_NAME + ' '+ getQueryWhere(mapParam) + ' WITH SECURITY_ENFORCED' );
     }
 
     public static String getAccountId(String userId){
