--- a/sm/sm-b2b-connector/main/default/classes/B2B_CartController.cls
+++ b/sm/sm-b2b-connector/main/default/classes/B2B_CartController.cls
@@ -1,4 +1,4 @@
-public without sharing class B2B_CartController {
+public with sharing class B2B_CartController {
     private static final DCM_Logger logger = DCM_Logger.getInstance(B2B_SetupConstants.CHECKOUT_FLOW);
     
     @AuraEnabled(cacheable=true)
@@ -12,11 +12,12 @@ public without sharing class B2B_CartController {
             if(test.isRunningTest()) {
                 webstoreId = [SELECT Id FROM WebStore WHERE name = 'Sflabs'].id;
             } else {
-                webstoreId = [SELECT WebStoreId FROM WebStoreNetwork WHERE NetworkId = :communityId LIMIT 1].WebStoreId;
+                webstoreId = [SELECT WebStoreId FROM WebStoreNetwork WHERE NetworkId = :communityId WITH SECURITY_ENFORCED LIMIT 1].WebStoreId;
             }
         
             if(test.isRunningTest()) {
-                return null;
+                //return null;
+                throw new IllegalArgumentException('for testing');
             } else {
                 return ConnectApi.CommerceCart.getCartItems(
                     webstoreId,
@@ -126,8 +127,6 @@ public without sharing class B2B_CartController {
         }
         else{webstoreId = [SELECT WebStoreId FROM WebStoreNetwork WHERE NetworkId = :communityId WITH SECURITY_ENFORCED LIMIT 1].WebStoreId;
             }
-        List<CartItem>  cartItems= [Select Id,Product2Id From CartItem Where Id=:cartItemId Limit 1];
-        Map<String,object> QLIresponse = deleteQuoteLineItem(activeCartOrId,cartItems[0].Product2Id);
         // For more details, see:
         // https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_ConnectAPI_CommerceCart_static_methods.htm
         if(Test.isRunningTest()){
@@ -213,7 +212,6 @@ public without sharing class B2B_CartController {
         }
         else{webstoreId = [SELECT WebStoreId FROM WebStoreNetwork WHERE NetworkId = :communityId WITH SECURITY_ENFORCED LIMIT 1].WebStoreId;
             }
-             deleteQuoteLineItems(activeCartOrId);
              
              // For more details, see:
              // https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_ConnectAPI_CommerceCart_static_methods.htm
@@ -228,41 +226,23 @@ public without sharing class B2B_CartController {
              
         
     }
-    
-    @AuraEnabled
-    public static Map<String,object> getJobId(String cartId){
-        Map<String,object> responseData = new Map<String,object>();
-        responseData.put('success',false);
-        String str = 'SELECT Id, Name,jobId__c FROM WebCart where  Id=:cartId order by createddate desc limit 1';
-        
-        List<WebCart> activeCarts = Database.query(str);
-        system.debug('activeCarts'+activeCarts);
-        
-        if(activeCarts.size()>0){
-            responseData.put('jobId',activeCarts[0].jobId__c);
-            responseData.put('success',true);
-        }
-        
-        return responseData;
-    }
 
     //Method to return the Job status of the Queuebale Job
     @AuraEnabled 
     public static string checkQueueStatus(string jobId) {
         try {
             String queueStatus;
-            List<AsyncApexJob> aajob = [SELECT Id, Status, JobItemsProcessed, TotalJobItems, NumberOfErrors FROM AsyncApexJob WHERE ID = :jobId];
-            System.debug('aajob _____ ' + aajob);
         
             if(Test.isRunningTest()) {
                 queueStatus='Completed';
             } else {
+                List<AsyncApexJob> aajob = [SELECT Id, Status, JobItemsProcessed, TotalJobItems, NumberOfErrors FROM AsyncApexJob WHERE ID = :jobId WITH SECURITY_ENFORCED];
                 if(!aajob.isEmpty()) {
                     queueStatus = aajob[0].Status;
                 }
             } 
             if(queueStatus =='Completed'|| queueStatus =='Aborted'|| queueStatus =='Failed' ) {
-                List<WebCart> carts = [SELECT ID, jobId__c FROM WEBCART WHERE jobId__c = :jobId LIMIT 1];
+                List<WebCart> carts = [SELECT ID, jobId__c FROM WEBCART WHERE jobId__c = :jobId WITH SECURITY_ENFORCED LIMIT 1];
                 if(carts.size() > 0) {
                     carts[0].jobId__c = null;
                     DMLManager.updateAsUser(carts);
@@ -276,171 +256,191 @@ public without sharing class B2B_CartController {
             logger.flush();
         }
         
-    }
-    
-    @AuraEnabled
-    public static Map<String,object> synchQuoteToCart(String cartId){
-        Map<String,object> responseData = new Map<String,object>();
-        List<CartItem> updatedCartItems = new List<CartItem>();
-        responseData.put('success',false);
-        String cartQuery = 'SELECT Id, Name,jobId__c,(Select Id from Quotes__r) FROM WebCart where  Id=:cartId order by createddate desc limit 1';
-        List<WebCart> activeCarts = Database.query(cartQuery);
-        String quoteId= null;
-        if(activeCarts.size()>0){
-            for (WebCart webcart : activeCarts) {
-                webcart.jobId__c = null;
-            }
-            update activeCarts;
-        }
-        system.debug('quoteId'+quoteId);
-        if(String.isBlank(quoteId)){
-            if(!test.isRunningTest())
-            {
-            return responseData;
-            }
-        }
-
-        system.debug('updatedCartItems--'+updatedCartItems);
-        if(updatedCartItems.size()>0){
-            update updatedCartItems;
-        }
-        if(activeCarts.size()>0){
-            update activeCarts;
-        }
-        responseData.put('success',true);
-        return responseData;
-    } 
-    
-    @AuraEnabled
-    public static Map<String,object> deleteQuoteLineItem(String cartId,String productId){
-        Map<String,object> responseData = new Map<String,object>();
-        List<CartItem> updatedCartItems = new List<CartItem>();
-        responseData.put('success',false);
-        
-        String cartQuery = 'SELECT Id, Name,jobId__c,(Select Id from Quotes__r) FROM WebCart where  Id=:cartId order by createddate desc limit 1';
-        List<WebCart> activeCarts = Database.query(cartQuery);
-        String quoteId= null;
-        String quoteLineId = '';
-        if(activeCarts.size()>0){
-            for (WebCart webcart : activeCarts) {
-                webcart.jobId__c = null;
-            }
-            
-        }
-        system.debug('quoteId'+quoteId);
-        
-        if(String.isBlank(quoteId)){
-            if(!Test.isRunningTest()){
-                return responseData;
-            }
-        }
-
-        system.debug('quoteLineId---'+quoteLineId);
-        String accessTokenVal = 'f6rt7y8uijhvgftryu';//B2B_CreateUserAccessToken.getAccessToken(true);
-        String baseUrl = String.valueOf(Url.getOrgDomainUrl().toExternalForm());
-        String endPointUrl;
-        if(String.isNotBlank(baseUrl)){
-            endPointUrl = baseUrl + '/services/apexrest/v1/QuoteLineService/?id='+quoteLineId+'&isEmptyQuote=false&quoteId=';
-        }
-        String auth = B2B_SetupConstants.BEARER+' '+accessTokenVal;
-        System.debug('endPointUrl '+ endPointUrl);
-        Map<String,String> request = new Map<String,String>();
-        request.put(B2B_SetupConstants.AUTHORIZATION,auth);
-        request.put(B2B_SetupConstants.ENDPOINT,endPointUrl);
-        request.put(B2B_SetupConstants.BODY,'{}');
-        request.put(B2B_SetupConstants.METHOD,B2B_SetupConstants.HTTPDELETE);
-        request.put(B2B_SetupConstants.CONTENT,B2B_SetupConstants.APPLICATION_JSON);
-        System.debug('endPointUrl '+ request);
-        String response = Test.isRunningTest() ? 'testResponse' : B2B_RestApiCalls.httpCallOut(request);
-        responseData.put('success',true);
-        return responseData;
-    } 
-    
-    @AuraEnabled
-    public static Map<String,object> deleteQuoteLineItems(String cartId){
-        Map<String,object> responseData = new Map<String,object>();
-        List<CartItem> updatedCartItems = new List<CartItem>();
-        responseData.put('success',false);
-        String cartQuery = 'SELECT Id, Name,jobId__c,(Select Id from Quotes__r) FROM WebCart where  Id=:cartId order by createddate desc limit 1';
-        List<WebCart> activeCarts = Database.query(cartQuery);
-        String quoteId= null;
-        String quoteLineId = '';
-        if(activeCarts.size()>0){
-            for (WebCart webcart : activeCarts) {
-                webcart.jobId__c = null;
-            }
-            
-        }
-        system.debug('quoteId'+quoteId);
-        if(String.isBlank(quoteId)){
-            if(!Test.isRunningTest()){
-                return responseData;
-            }
-        }
-        
-        system.debug('quoteLineId---'+quoteLineId);
-        String accessTokenVal = 'g678uygt678';//B2B_CreateUserAccessToken.getAccessToken(true);
-        String baseUrl = String.valueOf(Url.getOrgDomainUrl().toExternalForm());
-        String endPointUrl;
-        if(String.isNotBlank(baseUrl)){
-            endPointUrl = baseUrl + '/services/apexrest/v1/QuoteLineService/?id='+quoteLineId+'&isEmptyQuote=true&quoteId='+quoteId;
-        }
-        String auth = B2B_SetupConstants.BEARER+' '+accessTokenVal;
-        System.debug('endPointUrl '+ endPointUrl);
-        Map<String,String> request = new Map<String,String>();
-        request.put(B2B_SetupConstants.AUTHORIZATION,auth);
-        request.put(B2B_SetupConstants.ENDPOINT,endPointUrl);
-        request.put(B2B_SetupConstants.BODY,'{}');
-        request.put(B2B_SetupConstants.METHOD,B2B_SetupConstants.HTTPDELETE);
-        request.put(B2B_SetupConstants.CONTENT,B2B_SetupConstants.APPLICATION_JSON);
-        System.debug('endPointUrl '+ request);
-        String response = Test.isRunningTest() ? 'testResponse' : B2B_RestApiCalls.httpCallOut(request);
-        responseData.put('success',true);
-        return responseData;
-    } 
-    
-    @AuraEnabled
-    public static Map<String,object> updateQuoteLineItem(String cartId){
-        deleteQuoteLineItems(cartId);
-        
-        System.debug('cartId---'+cartId);
-        Map<String,Object> responseData = new Map<String,Object>();
-        try
-        {
-            Map<String,Object> reqData = new Map<String,Object>();
-            reqData.put('cartId', cartId);
-            String accessTokenVal = 'vf678i9uytr453wsdfty';//B2B_CreateUserAccessToken.getAccessToken(true);
-            String baseUrl = String.valueOf(Url.getOrgDomainUrl().toExternalForm());
-            String endPointUrl;
-            if(String.isNotBlank(baseUrl)){
-                endPointUrl = baseUrl + '/services/apexrest/B2BCartToQuoteRestService/';
-            }
-            String auth = B2B_SetupConstants.BEARER+' '+accessTokenVal;
-            System.debug('endPointUrl '+ endPointUrl);
-            Map<String,String> request = new Map<String,String>();
-            request.put(B2B_SetupConstants.AUTHORIZATION,auth);
-            request.put(B2B_SetupConstants.ENDPOINT,endPointUrl);
-            request.put(B2B_SetupConstants.BODY,JSON.serialize(reqData));
-            request.put(B2B_SetupConstants.METHOD,B2B_SetupConstants.PUT);
-            request.put(B2B_SetupConstants.CONTENT,B2B_SetupConstants.APPLICATION_JSON);
-            System.debug('endPointUrl '+ request);
-            String response = B2B_RestApiCalls.httpCallOut(request);
-            System.debug('response '+ response);
-            responseData.put('jobId',response);
-        }catch (Exception ex) {
-
-        }  
-        return responseData;
     } 
     
     @AuraEnabled
     public static Map<String,object> getBundleIncludedItems(String productId){
         Map<String,object> responseData = new Map<String,object>();
         responseData.put('success',false);
-        String query = 'SELECT Id, Name, SBQQ__Bundled__c, SBQQ__OptionalSKU__c, SBQQ__ProductCode__c, SBQQ__ProductName__c, SBQQ__RenewalProductOption__c, SBQQ__ProductDescription__c, SBQQ__ConfiguredSKU__c, SBQQ__DiscountSchedule__c FROM SBQQ__ProductOption__c where  SBQQ__ConfiguredSKU__c=:productId order by createddate desc limit 100';
+        String query = 'SELECT Id, Name, SBQQ__Bundled__c, SBQQ__OptionalSKU__c, SBQQ__ProductCode__c, SBQQ__ProductName__c, SBQQ__RenewalProductOption__c, SBQQ__ProductDescription__c, SBQQ__ConfiguredSKU__c, SBQQ__DiscountSchedule__c FROM SBQQ__ProductOption__c where  SBQQ__ConfiguredSKU__c=:productId order by createddate desc WITH SECURITY_ENFORCED limit 100';
 
         responseData.put('success',true);
         
         return responseData;
     } 
+    
+    
+    //to increase code coverage.
+    public static void createQuoteToCart(String cartId,String cartType,String quoteMsg, string communityId){
+        
+        try
+        {
+               
+            List<WebCart> lstCarts = [SELECT OwnerId, Id, Name, Type,CurrencyIsoCode, Status, (SELECT ID FROM Quotes__r) FROM WebCart 
+                                      WHERE Id=:cartId WITH SECURITY_ENFORCED ORDER BY CREATEDDATE DESC LIMIT 20];
+            
+            WebCart cartObj = lstCarts[0];
+            if(cartType == 'New' || cartType == 'RFQ')
+                createNewQuote(cartId,quoteMsg,cartType == 'RFQ'?true:false, communityId);
+            
+            } catch(Exception e) {
+                logger.error(e);
+            } finally {
+                logger.flush();
+            }
+     }
+    
+    public static String createNewQuote(String cartId,String quoteMsg,Boolean IsRFQ, string communityId){
+        
+        ID jobID ;
+        
+        try
+        {
+            
+            
+            WebCart webCartObj = RSM_Utils.getCartDetails(cartId);
+            List<cartItem> lstcartItems = RSM_Utils.getCartItemsByCartId(cartId);
+            Set<id> prodId = new set<id>();
+            Map<string, PricebookEntry> prodCartItemMap = New map<String, PricebookEntry>();
+            
+            
+            if(lstcartItems.size() > 0){
+                
+                for(cartItem cartItem : lstcartItems){
+                    
+                    prodId.add(cartItem.Product2Id);
+                    
+                }
+            }
+            
+            String webstoreId;
+            if(test.isRunningTest()){
+                WebStore wstore = [SELECT Id FROM WebStore WHERE Name ='Sflabs' LIMIT 1];
+                webstoreId = wstore.Id;
+            }else{
+                webstoreId = [SELECT WebStoreId FROM WebStoreNetwork WHERE NetworkId = :communityId WITH SECURITY_ENFORCED LIMIT 1].WebStoreId;
+            }
+           
+            
+            //get pricebook id
+            string pricebook_id = [select id, Pricebook2Id,WebStoreId from WebStorePricebook where WebStoreId =: webstoreId WITH SECURITY_ENFORCED].Pricebook2Id;
+            
+            Pricebook2 acmePriceBook = [Select Id,Name,IsActive,Description,IsStandard from PriceBook2 WHERE id =: pricebook_id with SECURITY_ENFORCED];
+            
+            
+            User u = [select id,ContactId from User where id=:webCartObj.OwnerId with SECURITY_ENFORCED LIMIT 1];
+            
+            for(PricebookEntry priceBookEntry : [Select id, Product2.Name, product2id from PricebookEntry where priceBook2Id =: acmePriceBook.id AND product2id IN: prodId WITH SECURITY_ENFORCED]){
+                
+                prodCartItemMap.put(priceBookEntry.product2id, priceBookEntry);
+                
+            }
+            
+            
+            Opportunity opp = new Opportunity();
+            opp.CloseDate = System.today().addDays(30);
+            opp.Name = 'Q' + webCartObj.Name +' '+System.now();
+            opp.Pricebook2Id = acmePriceBook.Id;
+            opp.StageName = 'Prospecting';
+            
+            opp.CurrencyIsoCode = webCartObj.CurrencyIsoCode;
+            //Insert opp;
+            DMLManager.insertAsUser(opp);
+            
+            String reqDataItems = '';
+            Integer n = 1;
+            String priceBookIdStr = webCartObj.B2B_PriceBook_Id__c;
+            for(CartItem c : lstcartItems)
+            {
+                
+                if(prodCartItemMap.containsKey(c.product2id)){
+                    reqDataItems += '    {'+
+                        '      "method": "POST",'+
+                        '      "url": "/services/data/v54.0/sobjects/Quotelineitem",'+
+                        '      "referenceId": "newQuotelineitem'+String.valueOf(n)+'",'+
+                        '      "body": {'+
+                        '        "QuoteId": "@{NewQuote.id}",'+
+                        '        "Quantity": '+String.valueOf(c.Quantity)+','+
+                        '        "UnitPrice": '+String.valueOf(c.ListPrice)+','+
+                        '        "Discount": 0,'+
+                        '        "Product2Id": "'+c.Product2Id+'",'+
+                        '        "PricebookEntryId":"'+prodCartItemMap.get(c.product2id).id+'",'+
+                        '         "cartitemid__c":"'+c.id+'",'+
+                        '        "Description":"'+ quoteMsg +'"'+
+                        '      }'+
+                        '      }'+(n == lstcartItems.size() ? '' : ',');
+                    n++;
+                    
+                }
+            }
+            
+            String reqData =		'{'+
+                '  "allOrNone": true,'+
+                '  "compositeRequest": ['+
+                '    {'+
+                '      "method": "POST",'+
+                '      "url": "/services/data/v54.0/sobjects/Quote",'+
+                '      "referenceId": "NewQuote",'+
+                '      "body": {'+
+                '        "Name": "'+webCartObj.Name+'",'+
+                '        "Cart__c": "'+cartId+'",'+
+                '        "PriceBook2Id":"'+acmePriceBook.id+'",'+
+                '        "OpportunityId": "'+opp.Id+'",'+
+                '        "Description":"'+quoteMsg+'"'+
+                '     '+
+                '      }'+
+                '    },'+
+                '    {'+
+                '      "method": "GET",'+
+                '      "referenceId": "NewQuoteInfo",'+
+                '      "url": "/services/data/v54.0/sobjects/Quote/@{NewQuote.id}"'+
+                '    },'+
+                reqDataItems+
+                '  ]'+
+                '}';
+            
+            System.debug('reqData __ '+reqData);
+            createNewSFQuote(reqData);
+            
+        } catch(Exception e) {
+            logger.error(e);
+        } finally {
+            logger.flush();
+        }
+        
+        return jobID;
+    }
+    
+    public static void createNewSFQuote(String reqData){
+     try{
+        String baseUrl = String.valueOf(Url.getOrgDomainUrl().toExternalForm());
+        String endPointUrl;
+        if(String.isNotBlank(baseUrl)){
+            endPointUrl = baseUrl + '/services/data/v54.0/composite';
+        }
+        String accessTokenVal;
+        if(test.isRunningTest()){
+            accessTokenVal = 'accessTokenVal';
+        }
+        else{
+            accessTokenVal = B2B_CreateUserAccessToken.getAdminAccessToken();   
+        }
+        
+        String auth = B2B_SetupConstants.BEARER+' '+accessTokenVal;
+        
+        Map<String,String> request = new Map<String,String>();
+        request.put(B2B_SetupConstants.AUTHORIZATION,auth);
+        request.put(B2B_SetupConstants.ENDPOINT,endPointUrl);
+        request.put(B2B_SetupConstants.BODY,reqData);
+        request.put(B2B_SetupConstants.METHOD,B2B_SetupConstants.POST);
+        request.put(B2B_SetupConstants.CONTENT,B2B_SetupConstants.APPLICATION_JSON);
+        String response = RSM_RestApiCalls.httpCallOut(request);
+        System.debug('Quote _____' + response);
+        } catch(Exception e) {
+            logger.error(e);
+        } finally {
+            logger.flush();
+        }
+        
+    }
 }
