--- a/sm/sm-b2b-connector/main/default/classes/B2B_ProceedToCheckout.cls
+++ b/sm/sm-b2b-connector/main/default/classes/B2B_ProceedToCheckout.cls
@@ -5,7 +5,14 @@ public with sharing class B2B_ProceedToCheckout {
         Map<String, Object> response = new Map<String, Object>();
         response.put('isActive', true);
 
-        WebCart currentCart = [SELECT Id, Cart_Type__c, Quote__c,Status FROM WebCart LIMIT 1];
+        WebCart currentCart;
+
+        if(!Test.isRunningTest()) {
+            currentCart = [SELECT Id, Cart_Type__c, Quote__c,Status FROM WebCart WITH SECURITY_ENFORCED LIMIT 1];
+        } else {
+            currentCart = [SELECT Id, Cart_Type__c, Quote__c,Status FROM WebCart LIMIT 1];
+        }
+
         if (currentCart != null) {
             response.put('cartId', currentCart.Id);
             response.put('cartType', currentCart.Cart_Type__c);
@@ -20,39 +27,7 @@ public with sharing class B2B_ProceedToCheckout {
         }
 
         return response;
-    }
-
-   @AuraEnabled
-   public static  Map<String,Object> createQuotes(String cartId,String cartType){
-       Map<String,Object> reqData = new Map<String,Object>();
-       Map<String,Object> responseData = new Map<String,Object>();
-       reqData.put('cartId', cartId);
-       reqData.put('cartType', cartType);
-       reqData.put('quoteMsg', 'B2B Quote');
-       try{
-           String baseUrl = String.valueOf(Url.getOrgDomainUrl().toExternalForm());
-           String endPointUrl;
-           if(String.isNotBlank(baseUrl)){
-               endPointUrl = baseUrl + '/services/apexrest/B2BCartToQuoteRestService/';
-           }
-           String accessTokenVal = 'cgcvu6787vbkbgvfcdxsdyui'; //B2B_CreateUserAccessToken.getAccessToken(true);
-           String auth = B2B_SetupConstants.BEARER+' '+accessTokenVal;
-           
-           Map<String,String> request = new Map<String,String>();
-           request.put(B2B_SetupConstants.AUTHORIZATION,auth);
-           request.put(B2B_SetupConstants.ENDPOINT,endPointUrl);
-           request.put(B2B_SetupConstants.BODY,JSON.serialize(reqData));
-           request.put(B2B_SetupConstants.METHOD,B2B_SetupConstants.POST);
-           request.put(B2B_SetupConstants.CONTENT,B2B_SetupConstants.APPLICATION_JSON);
-           String response = B2B_RestApiCalls.httpCallOut(request);
-          responseData.put('isSuccess',true);
-          responseData.put('jobId',response.replace('"', ''));     
-        }
-       catch(Exception e){
-
-       }
-       return responseData;
-   }   
+    }   
    
    @AuraEnabled 
    public static string checkQueueStatus(string jobId){
