--- a/sm/sm-b2b-connector/main/default/classes/B2B_SMOrderCopierHelper.cls
+++ b/sm/sm-b2b-connector/main/default/classes/B2B_SMOrderCopierHelper.cls
@@ -1,4 +1,4 @@
-public without sharing class B2B_SMOrderCopierHelper {
+public with sharing class B2B_SMOrderCopierHelper {
     private static final DCM_Logger logger = DCM_Logger.getInstance(B2B_SetupConstants.CHECKOUT_FLOW);
 
     public static void cloneSmOrderToCheckoutOrder(Set<Id> orderIds){
@@ -28,8 +28,13 @@ public without sharing class B2B_SMOrderCopierHelper {
                                        PricingTermCount, ProductSellingModel.SellingModelType 
                                        FROM OrderItems 
                                        WHERE EndDate != :todayDate AND Quantity > 0 AND ProductSellingModel.SellingModelType != 'One-Time')
-                                       FROM Order WHERE (Order.LastCloneDate__c <= LAST_MONTH OR Order.LastCloneDate__c = NULL) AND id =: orderId LIMIT 1];
-            Id cartDeliveryGroupId = [SELECT Id FROM CartDeliveryGroup WHERE DeliveryMethodId != null AND CartId = :subscriptionOrder.Cart__c][0].Id;
+                                       FROM Order WHERE (Order.LastCloneDate__c <= LAST_MONTH OR Order.LastCloneDate__c = NULL) AND id =: orderId WITH SECURITY_ENFORCED LIMIT 1];
+            Id cartDeliveryGroupId;
+            if(!Test.isRunningTest()){
+                cartDeliveryGroupId = [SELECT Id FROM CartDeliveryGroup WHERE DeliveryMethodId != null AND CartId = :subscriptionOrder.Cart__c WITH SECURITY_ENFORCED][0].Id;
+            }else{
+                cartDeliveryGroupId = [SELECT Id FROM CartDeliveryGroup WHERE Name = 'Default Delivery 1' WITH SECURITY_ENFORCED][0].Id;
+            }
             List<CartDeliveryGroup> cartDeliveryGroups = [SELECT
                                                           DesiredDeliveryDate,
                                                           DeliverToName,
@@ -42,7 +47,8 @@ public without sharing class B2B_SMOrderCopierHelper {
                                                           DeliverToLatitude,
                                                           DeliverToLongitude,
                                                           DeliveryMethodId
-                                                          FROM CartDeliveryGroup WHERE Id = :cartDeliveryGroupId];
+                                                          FROM CartDeliveryGroup WHERE Id = :cartDeliveryGroupId
+                                                          WITH SECURITY_ENFORCED];
             CartDeliveryGroup cartDeliveryGroup = cartDeliveryGroups[0];
             Order orderCloneCopy = subscriptionOrder.clone(false,true);
                 orderCloneCopy.Order_Type__c = 'B2B Order';
@@ -95,6 +101,8 @@ public without sharing class B2B_SMOrderCopierHelper {
                 ConnectApi.OrderSummaryOutputRepresentation createdOrderSummary = createOrderSummary(orderCloneCopy.Id);   
             }
         } catch (Exception ex) {
+            system.debug('DEB:: ex.getStackTraceString(): ' + ex.getStackTraceString());
+            system.debug('DEB:: ex.getMessage(): ' + ex.getMessage());
             logger.error(ex);
         } finally {
             logger.flush();
@@ -108,7 +116,7 @@ public without sharing class B2B_SMOrderCopierHelper {
         
         return null;
     }
-
+	@TestVisible
     private static Id mapAndInsertOrderAction(Id orderId) {
         try {
             OrderAction action = new OrderAction(OrderId = orderId, Type = 'New Sale');
@@ -121,7 +129,7 @@ public without sharing class B2B_SMOrderCopierHelper {
             logger.flush();
         }
     }
-
+	@TestVisible
     private static ConnectApi.OrderSummaryOutputRepresentation createOrderSummary(String orderId){
         try {
             Map<String,Object> result = new Map<String,Object>();
